# gemserv

./: Cargo.toml  README  config.toml
cgi-scripts/cgi/: example1.sh  example2.sh  getmanpage.sh  subscribe.sh
src/: con_handler.rs  config.rs  logger.rs  main.rs
src/lib/: conn.rs  mime.rs  mod.rs  server.rs  tls.rs
