[package]
name = "gemserv"
version = "0.7.0"
authors = ["int 80h <int@80h.dev>","Wim Stockman <wim@thinkerwim.org>"]
edition = "2021"
description = "A gemini server"
keywords = ["server", "gemini", "protocol"]
categories = ["network-programming"]
readme = "README"
homepage = "https://sr.ht/~int80h/gemserv/"
repository = "https://git.sr.ht/~int80h/gemserv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = [ "full" ] }
rustls-pemfile = "1"
futures-util = "0.3.19"
toml = "0.5.8"
serde = "1.0.132"
serde_derive = "1.0.132"
url = "2.2.2"
new_mime_guess = "3.0.2"
mime = "0.3.16"
log = "0.4.14"
simple_logger = "1.16"
sha2 = "0.9.8"
x509-parser = "0.12"
regex = "1.5.4"
lazy_static = "1.4.0"

[dependencies.tokio-rustls]
version = "0.23.2"
optional = false
features = ["dangerous_configuration"]

[features]
default = [ "cgi", "scgi", "proxy","authlocation","followsymlinks" ]
cgi = []
scgi = []
proxy = []
authlocation = []
followsymlinks = []

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [ "cgi-scripts/agena-cgi" ]
